# agentops-studio-

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_agents_extra_fields.py  0003_run_cost_error.py  0004_token_usage_estimated_cost.py  0005_runs_final_response.py  0006_agent_channel_bindings.py  0007_routing_rules.py
backend/app/: config.py  main.py
backend/app/api/: agents.py  routing_rules.py  runs.py  websocket.py  workflows.py
backend/app/channels/: base.py
backend/app/channels/telegram/: handler.py
backend/app/db/: models.py  session.py
backend/app/runtime/: compiler.py  executor.py  guardrails.py  llm.py
backend/app/runtime/tools/: __init__.py  calculator.py  payment_tools.py  telegram_tool.py
backend/app/seeds/: seed_agents.py  seed_mock_data.py  seed_routing_rules.py  seed_workflows.py
backend/app/services/: agent_service.py  message_service.py  observability_service.py  runtime_service.py  workflow_service.py
backend/tests/: conftest.py  test_agent_crud.py  test_agent_handoff.py  test_agents.py  test_telegram_delivery.py  test_tool_execution.py  test_workflow_compile.py  test_workflow_execution.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agents/: page.tsx
frontend/app/playground/: page.tsx
frontend/lib/: api.ts  normalizeWorkflow.ts  websocket.ts
(+17 files in other folders)
